--- a/app/app/assets/css/tailwind.css
+++ b/app/app/assets/css/tailwind.css
@@ -12,3 +12,6 @@ html {
   font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Arial, sans-serif;
 }
 
+body {
+  margin: 0;
+}
